//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Study_Data {
  id String [pk]
  date_modified DateTime [not null]
  uploadedBy String [not null]
  Water_Sample_Data Water_Sample_Data [not null]
  Measurement_Metadata Measurement_Metadata
  Occurrences Occurrence [not null]
  Amplicon_PrepData Amplicon_PrepData
  Metag_Prep_Data Metag_Prep_Data
  Analysis_Data Analysis_Data
  project_name String [not null]
  project_id_external String [not null]
  project_id_internal String
  projectContact String [not null]
  projectContactID String
  project_description String [not null]
  study_area_description String
  sampling_description String
  keywords String
  grant_number Int
  grant_title String
  grant_agency String
  recordedBy String[] [not null]
  recordedByID String
  institution String
  institutionID String
  associated_parties String
  license String [not null]
  rightsHolder String
  accessRights String
  informationWithheld String
  dataGeneralizations String
  bibliographicCitation String
  associated_resource String[] [not null]
  experimental_factor String
  detection_type String
  citation String
  project_proposal String
  nucl_acid_ext String
  nucl_acid_ext_kit String
  nucl_acid_ext_modify String
  precip_method_ext String
  dna_cleanup_0_1 String
  dna_cleanup_method String
  concentration_method String
  seq_kit String
  lib_layout lib_layout [not null]
  adapter_forward String
  adapter_reverse String
  seq_facility String
  lib_screen String
  platform platform [not null]
  instrument_model instrument_model [not null]
}

Table Water_Sample_Data {
  id String [pk]
  date_modified DateTime [not null]
  uploadedBy String [not null]
  Study_DataId String [not null]
  Study_Data Study_Data [not null]
  OtherData OtherData [not null]
  BARCODE_prep_per_library BARCODE_prep_per_library
  Metag_Individual_Data Metag_Individual_Data
  sample_name String [not null]
  sample_type sample_type
  serial_number String
  cruise_id String
  line_id String
  station String
  locationID String
  habitat_natural_artificial_0_1 String
  ctd_bottle_no String
  sample_replicate String
  source_material_id String
  biological_replicates String
  notes_sampling String
  verbatimEventDate String
  eventDate String [not null]
  minimumDepthInMeters Float
  maximumDepthInMeters Float
  env_broad_scale String [not null]
  env_local_scale String [not null]
  env_medium String [not null]
  geo_loc_name String [not null]
  waterBody String
  country String
  decimalLatitude Float
  decimalLongitude Float
  collection_method String
  samp_collect_device String
  samp_size String
  samp_size_unit String
  extract_number String
  samp_mat_process String
  filter_passive_active_0_1 String
  filter_onsite_dur String
  size_frac String
  sample_title String
  bioproject_accession String
  biosample_accession String
  organism String [not null]
  description String
  amplicon_sequenced String
  metagenome_sequence String
  samp_vol_we_dna_ext String
  samp_vol_ext_unit String
  sterilise_method String
  samp_store_dur String
  samp_store_loc String
  samp_store_temp String
  samp_store_sol String

  indexes {
    (id, sample_name) [unique]
  }
}

Table BARCODE_prep_per_library {
  id String [pk]
  date_modified DateTime [not null]
  uploadedBy String [not null]
  Water_Sample_DataId String [not null]
  sample_name String [not null]
  Water_Sample_Data Water_Sample_Data [not null]
  BARCODE_prep_all_librariesId String [not null]
  BARCODE_prep_all_libraries BARCODE_prep_all_libraries [not null]
  library_id String [not null]
  title String [not null]
  design_description String [not null]
  filetype filetype [not null]
  filename String [not null]
  filename2 String
  biosample_accession String
  sra_accession String
  mid_forward String
  mid_reverse String
  pool_dna_0_1 String
  pool_dna_num String
  date_dna_extracted String
  extraction_personnel String
  date_pcr String
  pcr_personnel String

  indexes {
    (Water_Sample_DataId, sample_name) [unique]
  }
}

Table BARCODE_prep_all_libraries {
  id String [pk]
  date_modified DateTime [not null]
  uploadedBy String [not null]
  BARCODE_prep_per_library BARCODE_prep_per_library [not null]
  pos_cont_type String
  neg_cont_type String
  nucl_acid_amp String
  pcr_cond String
  annealingTemp String
  amplificationReactionVolume String
  pcr_rep String
  pcr_analysis_software String
  pcr_primer_forward String
  pcr_primer_reverse String
  pcr_primer_name_forward String
  pcr_primer_name_reverse String
  pcr_primer_reference_forward String
  pcr_primer_reference_reverse String
  target_taxa_pcr String
  target_taxa_study String
  target_gene String
  target_subfragment String
  target_gene_size String
  pcr_method_additional String
  sop_bioinformatics String
  code_repo String
  trim_method String
  trim_param String
  demux_tool String
  demux_max_mismatch String
  merge_tool String
  merge_min_overlap String
  min_len_0_1 String
  min_len_cutoff String
  min_len_tool String
  min_reads_0_1 String
  min_reads_cutoff String
  min_reads_cutoff_unit String
  min_reads_tool String
  error_rate_0_1 String
  error_rate_tool String
  error_rate_type String
  error_rate_cutoff String
  chimera_check_0_1 String
  chimera_check_method String
  chimera_check_param String
  otu_clust_0_1 String
  otu_clust_tool String
  otu_clust_cutoff String
  curation_0_1 String
  curation_tool String
  curation_param String
  otu_db String
  otu_db_custom String
  otu_seq_comp_appr String
  tax_class_id_cutoff String
  tax_class_query_cutoff String
  tax_class_collapse String
  tax_class_param_other String
  tax_class String
  screen_contam_0_1 String
  screen_contam_method String
  screen_geograph_0_1 String
  screen_geograph_method String
  screen_nontarget_0_1 String
  screen_nontarget_method String
  screen_other String
  bioinfo_method_additional String
}

Table Metag_Individual_Data {
  id String [pk]
  date_modified DateTime [not null]
  uploadedBy String [not null]
  Water_Sample_DataId String [not null]
  sample_name String [not null]
  Water_Sample_Data Water_Sample_Data [not null]
  library_id String [not null]
  title String [not null]
  design_description String [not null]
  filetype filetype [not null]
  filename String [not null]
  filename2 String
  drive_location String
  biosample_accession String
  sra_accession String
  mid_barcode String

  indexes {
    (Water_Sample_DataId, sample_name) [unique]
  }
}

Table Amplicon_PrepData {
  id String [pk]
  date_modified DateTime [not null]
  uploadedBy String [not null]
  Study_DataId String [unique, not null]
  Study_Data Study_Data [not null]
  sample_name String [not null]
  library_id String [not null]
  title String [not null]
  library_strategy library_strategy [not null]
  library_source library_source [not null]
  library_selection library_selection [not null]
  lib_layout lib_layout [not null]
  platform String [not null]
  instrument_model String [not null]
  design_description String [not null]
  filetype filetype [not null]
  filename String [not null]
  filename2 String
  drive_location String [not null]
  biosample_accession String
  sra_accession String
  date_dna_extracted String [not null]
  extraction_personnel String [not null]
  date_pcr String [not null]
  pcr_personnel String [not null]
  seq_facility String
  seq_meth String
  nucl_acid_ext String
  amplicon_sequenced String
  target_gene String
  target_subfragment String
  pcr_primer_forward String
  pcr_primer_reverse String
  pcr_primer_name_forward String
  pcr_primer_name_reverse String
  pcr_primer_reference String
  pcr_cond String
  nucl_acid_amp String
  adapters String
  mid_barcode String
}

Table Metag_Prep_Data {
  id String [pk]
  date_modified DateTime [not null]
  uploadedBy String [not null]
  Study_DataId String [unique, not null]
  Study_Data Study_Data [not null]
  sample_name String [not null]
  library_id String [not null]
  title String [not null]
  library_strategy library_strategy [not null]
  library_source library_source [not null]
  library_selection library_selection [not null]
  lib_layout lib_layout [not null]
  platform String [not null]
  instrument_model String [not null]
  design_description String [not null]
  filetype filetype [not null]
  filename String [not null]
  filename2 String
  drive_location String [not null]
  biosample_accession String
  sra_accession String
  seq_facility String
  nucl_acid_ext String
  nucl_acid_amp String
  adapters String
  mid_barcode String
  seq_meth String
  tax_class String
}

Table Analysis_Data {
  id String [pk]
  date_modified DateTime [not null]
  uploadedBy String [not null]
  Study_DataId String [unique, not null]
  Study_Data Study_Data [not null]
  amplicon_sequenced String [not null]
  ampliconSize Int
  trim_method String
  cluster_method String
  pid_clustering String
  taxa_class_method String [not null]
  taxa_ref_db String [not null]
  assembly_qual String
  assembly_software String
  annot String
  number_contig Int
  code_repo String [not null]
  sop String
  identificationReferences String [not null]
  controls_used String
  compl_score String
  compl_software String
  compl_appr String
  contam_score String
  contam_screen_input String
  contam_screen_param String
  decontam_software String
  bin_param String
  bin_software String
  reassembly_bin String
  mag_cov_software String
}

Table Measurement_Metadata {
  id String [pk]
  date_modified DateTime [not null]
  uploadedBy String [not null]
  Study_DataId String [unique, not null]
  Study_Data Study_Data [not null]
  aoml_term String [unique, not null]
  aoml_file String [not null]
  measurementType String
  measurementUnit String
  measurementTypeID String
  measurementUnitID String
}

Table Taxonomy {
  id String [pk]
  Features Feature [not null]
  stringIdentifier String [unique, not null]
  domain String
  kingdom String
  supergroup String
  division String
  phylum String
  subdivison String
  taxonClass String
  order String
  family String
  genus String
  species String
}

Table Feature {
  id String [pk]
  TaxonomyId String [not null]
  Taxonomy Taxonomy [not null]
  Occurrences Occurrence [not null]
  featureId String [unique, not null]
  confidence Float [not null]
}

Table Occurrence {
  id String [pk]
  FeatureId String [not null]
  Feature Feature [not null]
  SampleMetadataId String [not null]
  SampleMetadata SampleMetadata [not null]
  Study_DataId String
  Study_Data Study_Data
  organismQuantity Int [not null]
}

Table SampleMetadata {
  id String [pk]
  Occurrences Occurrence [not null]
  OtherData OtherData [not null]
  sample_name String [unique, not null]
  replicate String
  serial_number String
  extract_number String
  seqid_16s_xxx String
  seqid_18s_xxx String
  seqid_12s_xxx String
  project_id String
  project_title String
  project_description String
  project_proposal String
  notes String
  collection_date_only String
  collection_time_local_only String
  cruise String
  station String
  region String
  degrees_latitude Float
  degrees_longitude Float
  depth_meters Int
  depth_category String
  ctd_bottle_no Int
  volume_filtered_ml Int
  sample_collection_device String
  sample_collection_method String
  sample_material_processing String
  size_fraction String
  env_material String
  sample_type String
  temperature_celsius Float
  ph Float
  salinity Float
  pressure Int
  temp_station String
  temp_depth String
  ctdoxy Float
  oxygen_umol_kg Float
  phosphate_umol_kg Float
  silicate_umol_kg Float
  nitrate_umol_kg Float
  nitrite_umol_kg Float
  nitrate_nitrite_umol_kg Float
  nh4_umol_kg Float
  dic_umol_kg Float
  pco2_mea_uatm Float
  ph_tot_mea Float
  carbonate_umol_kg Float
  dna_sample_number Int
  plate String
  plate_name String
  well_number Int
  well_position String
  station_depth String
  ship_crs_expocode String
  woce_sect String
  date String
  utc_time String
  lat_lon String
  submitted_to_insdc String
  investigation_type String
  samp_mat_process String
  target_gene String
  additional_notes String
  notes_on_bottle_metadata String
}

Table OtherData {
  id String [pk]
  SampleMetadataId String
  SampleMetadata SampleMetadata
  Water_Sample_DataId String
  Water_Sample_Data Water_Sample_Data
  key String [not null]
  value String [not null]
}

Enum sample_type {
  seawater
  sediment
  extraction_blank
  distilled_water_blank
  rtsf_blank
  mock_community
  positive_control
  pcr_no_template_control
  bead_cleanup_blank
  mock
  pcr_blank
}

Enum oxy_stat_samp {
  aerobic
  anaerobic
}

Enum rel_to_oxy {
  aerobe
  anaerobe
  facultative
  microaerophilic
  microanaerobe
  obligate_aerobe
  obligate_anaerobe
  missing
  not_applicable
  not_collected
  not_provided
  restricted_access
}

Enum tidal_stage {
  low
  high
}

Enum library_strategy {
  wga
  wgs
  wxs
  rna_seq
  mirna_seq
  wcs
  clone
  poolclone
  amplicon
  cloneend
  finishing
  chip_seq
  mnase_seq
  dnase_hypersensitivity
  bisulfite_seq
  tn_seq
  est
  fl_cdna
  cts
  mre_seq
  medip_seq
  mdb_seq
  synthetic_long_read
  atac_seq
  chia_pet
  faire_seq
  hi_c
  ncrna_seq
  rad_seq
  rip_seq
  selex
  ssrna_seq
  targeted_capture
  tethered_chromatin_conformation_capture
  other
}

Enum library_source {
  genomic
  transcriptomic
  metagenomic
  metatranscriptomic
  synthetic
  viral_rna
  genomic_single_cell
  transcriptomic_single_cell
  other
}

Enum library_selection {
  random
  pcr
  random_pcr
  rt_pcr
  hmpr
  mf
  cf_s
  cf_m
  cf_h
  cf_t
  mda
  msll
  cdna
  chip
  mnase
  dnase
  hybrid_selection
  reduced_representation
  restriction_digest
  five_methylcytidine_antibody
  mbd2_protein_methyl_cpg_binding_domain
  cage
  race
  size_fractionation
  padlock_probes_capture_method
  other
  unspecified
  cnda_oligo_dt
  cdna_randomprinting
  inverse_rrna
  oligo_dt
  polya
  repeat_fractionation
}

Enum lib_layout {
  paired
  single
}

Enum platform {
  underscore_ls454
  abi_solid
  bgiseq
  capillary
  complete_genomics
  helicos
  illumina
  ion_torrent
  oxford_nanopore
  pacbio_smrt
}

Enum instrument_model {
  bgiseq_500
  dnbseq_g400
  dnbseq_t7
  dnbseq_g50
  mgiseq_2000rs
}

Enum filetype {
  bam
  srf
  sff
  fastq
  fourfivefour_native
  helicos_native
  solid_native
  pacbio_hdf5
  completegenomics_native
  oxfordnanopore_native
}

Enum replicate {
  a
  b
  c
}

Enum depth_category {
  dcm
  deep
  diw
  sediment
  surface
}

Enum sample_collection_device {
  extraction_filter
  milliq_carboy
  niskin_bottle
  pcr_negative_control
  positive_control_16s
  sediment_core_aqueous_layer
}

Enum sample_collection_method {
  ctd_rosette
  extraction_filter
  milliq_carboy
  pcr_negative_control
  positive_control_16s
  sediment_core_aqueous_layer
}

Enum plate {
  plate1
  plate2
  plate3
  plate4
  plate5
  plate6
}

Enum target_gene {
  sixteen_s_rrna_18s_rrna
}

Ref: Water_Sample_Data.Study_DataId > Study_Data.id

Ref: BARCODE_prep_per_library.(Water_Sample_DataId, sample_name) - Water_Sample_Data.(id, sample_name)

Ref: BARCODE_prep_per_library.BARCODE_prep_all_librariesId > BARCODE_prep_all_libraries.id

Ref: Metag_Individual_Data.(Water_Sample_DataId, sample_name) - Water_Sample_Data.(id, sample_name)

Ref: Amplicon_PrepData.Study_DataId - Study_Data.id

Ref: Metag_Prep_Data.Study_DataId - Study_Data.id

Ref: Analysis_Data.Study_DataId - Study_Data.id

Ref: Measurement_Metadata.Study_DataId - Study_Data.id

Ref: Feature.TaxonomyId > Taxonomy.id

Ref: Occurrence.FeatureId > Feature.id

Ref: Occurrence.SampleMetadataId > SampleMetadata.id

Ref: Occurrence.Study_DataId > Study_Data.id

Ref: OtherData.SampleMetadataId > SampleMetadata.id

Ref: OtherData.Water_Sample_DataId > Water_Sample_Data.id